[web-animation] Make contain/will-change/writing modes props not animatable

Match the recent CSSWG resolutions:
https://github.com/w3c/csswg-drafts/issues/2737#issuecomment-402574750
https://github.com/w3c/csswg-drafts/issues/2751#issuecomment-402604609


Make following properties none animatable:

* contain
* direction
* display
* text-orientation
* unicode-bidi
* will-change
* writing-mode


Note that wpt tests have already been updated for direction and writing-mode
here [1]

[1] https://github.com/web-platform-tests/wpt/commit/41f4ab65b239a5a9e9eeedadc2cae3d1fe0234c0

Bug: 860359
Change-Id: I3e7296e3c28ff494eddbc6f011621dd29ba7d2aa
Reviewed-on: https://chromium-review.googlesource.com/1127062
Commit-Queue: Majid Valipour <majidvp@chromium.org>
Reviewed-by: Eric Willigers <ericwilligers@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573509}